# bit-array

./: .gitignore  README.md  deps.toml
.github/workflows/: build_linux.yml
src/: CMakeLists.txt
src/include/bit-array/: bit_array.h
src/lib/: CMakeLists.txt  bit_array.c
src/test/: CMakeLists.txt  main.c  test.c
